19.2 update integration tests for PersonControllerJson
- include disablePerson test